# evil-rs

./: Cargo.toml  README.md
src/: lib.rs  new_type_option.rs  omit.rs  pick.rs
src/omit/: option.rs
tests/: test.rs  test_omit.rs  test_pick.rs
