[package]
name = "evil"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = "0.14.3"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["extra-traits", "parsing", "derive"] }

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.3.0"
validator = { version = "0.16", features = ["derive"] }
